--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-/* parkour text */
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8" />
-    <title>跑酷遊戲 - 火柴人版</title>
+    <title>跑酷</title>
     <style>
         body {
             margin: 0;
